# cxx-swift

./: .dockerignore  .gitignore  CMakeLists.txt  Cargo.toml  Dockerfile.base-rust  Dockerfile.base-swift-project  Dockerfile.cxx-swift  Dockerfile.cxx-swift-dev  README.md  cxx-swift.code-workspace  rustfmt.toml
crates/cxx-swift/: Cargo.toml  build.rs
crates/cxx-swift-abi/: Cargo.toml  build.rs
crates/cxx-swift-abi/abi/swift/ast/: ast_context.json  ast_walker.json  ast_walker_base.json  ast_walker_rust.json  decl.json  dependency_tracker.json  diagnostic_engine.json  expr.json  identifier.json  module_decl.json  pattern.json  search_path_options.json  sil_options.json  stmt.json  type_repr.json
crates/cxx-swift-abi/abi/swift/ast/ast_walker/: parent_ty.json  pre_walk_result_expr.json
crates/cxx-swift-abi/abi/swift/ast/identifier/: small_vector.json  small_vector_impl.json
crates/cxx-swift-abi/abi/swift/ast/import_path/: module.json
crates/cxx-swift-abi/abi/swift/basic/: clang_importer_options.json  lang_options.json  source_loc.json  source_manager.json  type_checker_options.json
crates/cxx-swift-abi/abi/swift/clang_importer/: clang_importer.json  effective_clang_context.json  serialized_swift_name.json  swift_lookup_table.json
crates/cxx-swift-abi/abi/swift/clang_importer/serialized_swift_name/: owning_iterator.json  small_vector.json  small_vector_boxed.json  small_vector_impl.json
crates/cxx-swift-abi/abi/swift/clang_importer/swift_lookup_table/: single_entry.json
crates/cxx-swift-abi/abi/swift/symbol_graph_gen/: symbol_graph_options.json
crates/cxx-swift-abi/cxx/include/swift/AST/: ASTContext.hxx  ASTWalker.hxx  ASTWalkerBase.hxx  Decl.hxx  DependencyTracker.hxx  DiagnosticEngine.hxx  Expr.hxx  Identifier.hxx  ModuleDecl.hxx  Pattern.hxx  SILOptions.hxx  SearchPathOptions.hxx  Stmt.hxx  TypeRepr.hxx
crates/cxx-swift-abi/cxx/include/swift/Basic/: ClangImporterOptions.hxx  LangOptions.hxx  SourceLoc.hxx  SourceManager.hxx  TypeCheckerOptions.hxx
crates/cxx-swift-abi/cxx/include/swift/ClangImporter/: ClangImporter.hxx  EffectiveClangContext.hxx  SerializedSwiftName.hxx  SwiftLookupTable.hxx
crates/cxx-swift-abi/cxx/include/swift/SymbolGraphGen/: SymbolGraphOptions.hxx
crates/cxx-swift-abi/cxx/lib/: cmake.cxx
crates/cxx-swift-abi/src/: abi.rs  lib.rs
crates/cxx-swift-abi/src/abi/: llvm.rs  swift.rs
crates/cxx-swift-abi/src/abi/llvm/: adt.rs
crates/cxx-swift-abi/src/abi/llvm/adt/: small_vector.rs  small_vector_impl.rs
crates/cxx-swift-abi/src/abi/swift/: ast.rs  basic.rs  clang_importer.rs  symbol_graph_gen.rs
crates/cxx-swift-abi/src/abi/swift/ast/: ast_context.rs  ast_walker.rs  ast_walker_base.rs  ast_walker_rust.rs  decl.rs  dependency_tracker.rs  diagnostic_engine.rs  expr.rs  identifier.rs  import_path.rs  module_decl.rs  pattern.rs  search_path_options.rs  sil_options.rs  stmt.rs  type_repr.rs
crates/cxx-swift-abi/src/abi/swift/basic/: clang_importer_options.rs  lang_options.rs  source_loc.rs  source_manager.rs  type_checker_options.rs
crates/cxx-swift-abi/src/abi/swift/clang_importer/: clang_importer.rs  effective_clang_context.rs  serialized_swift_name.rs  swift_lookup_table.rs
crates/cxx-swift-abi/src/abi/swift/symbol_graph_gen/: symbol_graph_options.rs
crates/cxx-swift-auto/: Cargo.toml  build.rs
crates/cxx-swift-auto/auto/swift/ast/: ast_context.json  ast_walker.json  ast_walker_base.json  ast_walker_rust.json  decl.json  dependency_tracker.json  diagnostic_engine.json  expr.json  identifier.json  module_decl.json  pattern.json  search_path_options.json  sil_options.json  stmt.json  type_repr.json
crates/cxx-swift-auto/auto/swift/ast/ast_walker/: parent_ty.json  pre_walk_result_expr.json
crates/cxx-swift-auto/auto/swift/ast/identifier/: small_vector.json  small_vector_impl.json
crates/cxx-swift-auto/auto/swift/ast/import_path/: module.json
crates/cxx-swift-auto/auto/swift/basic/: clang_importer_options.json  lang_options.json  source_loc.json  source_manager.json  type_checker_options.json
crates/cxx-swift-auto/auto/swift/clang_importer/: clang_importer.json  effective_clang_context.json  serialized_swift_name.json  swift_lookup_table.json
crates/cxx-swift-auto/auto/swift/clang_importer/serialized_swift_name/: small_vector.json  small_vector_boxed.json  small_vector_impl.json
crates/cxx-swift-auto/auto/swift/clang_importer/swift_lookup_table/: single_entry.json
crates/cxx-swift-auto/auto/swift/symbol_graph_gen/: symbol_graph_options.json
crates/cxx-swift-auto/cxx/include/swift/AST/: ASTContext.hxx  ASTWalker.hxx  ASTWalkerBase.hxx  Decl.hxx  DependencyTracker.hxx  DiagnosticEngine.hxx  Expr.hxx  Identifier.hxx  ModuleDecl.hxx  Pattern.hxx  SILOptions.hxx  SearchPathOptions.hxx  Stmt.hxx  TypeRepr.hxx
crates/cxx-swift-auto/cxx/include/swift/Basic/: ClangImporterOptions.hxx  LLVMInitialize.hxx  LangOptions.hxx  SourceLoc.hxx  SourceManager.hxx  TypeCheckerOptions.hxx
crates/cxx-swift-auto/cxx/include/swift/ClangImporter/: ClangImporter.hxx  EffectiveClangContext.hxx  SerializedSwiftName.hxx  SwiftLookupTable.hxx
crates/cxx-swift-auto/cxx/include/swift/SymbolGraphGen/: SymbolGraphOptions.hxx
crates/cxx-swift-auto/cxx/lib/: cmake.cxx
crates/cxx-swift-auto/src/: lib.rs  proxy.rs
crates/cxx-swift-auto/src/proxy/: ast_walker_dyn.rs
crates/cxx-swift-build/: Cargo.toml
crates/cxx-swift-build/src/: lib.rs
crates/cxx-swift/cxx/include/swift/AST/: ASTWalkerRust.hxx
crates/cxx-swift/cxx/lib/swift/AST/: ASTWalkerBase.cxx  ASTWalkerRust.cxx
crates/cxx-swift/src/: abi.rs  lib.rs  util.rs
crates/cxx-swift/src/abi/: llvm.rs  swift.rs
crates/cxx-swift/src/abi/llvm/: adt.rs
crates/cxx-swift/src/abi/llvm/adt/: small_vector_impl.rs
crates/cxx-swift/src/abi/swift/: ast.rs  basic.rs  clang_importer.rs  symbol_graph_gen.rs
crates/cxx-swift/src/abi/swift/ast/: ast_context.rs  ast_walker.rs  ast_walker_base.rs  ast_walker_rust.rs  decl.rs  dependency_tracker.rs  expr.rs  (+8 more)
crates/cxx-swift/src/util/: class.rs
crates/cxx-swift/tests/: all.rs  common.rs
crates/cxx-swift/tests/swift/ast/: ast_walker.rs
(+154 files in other folders)
