[package]
edition = "2021"
name = "cxx-swift-build"
version = "0.0.1"
authors = ["silvanshade <silvanshade@users.noreply.github.com>"]
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/silvanshade/cxx-swift"
description = "Common build code for cxx-swift"

[dependencies]
cxx-build = { version = "1.0", features = ["parallel"] }
cxx-clang-build = "0.0"
cxx-llvm-build = "0.0"
cxx-llvm-build-common = "0.0"
normpath = "1.1"
snafu = "0.7"
