[package]
edition = "2021"
name = "cxx-swift"
version = "0.0.1"
authors = ["silvanshade <silvanshade@users.noreply.github.com>"]
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/silvanshade/cxx-swift"
description = "cxx-style FFI bindings to the Swift C++ API"

[features]
default = ["tracing"]
debug = []
tracing = ["debug", "dep:tracing", "dep:tracing-forest", "dep:tracing-subscriber"]

[build-dependencies]
cxx-clang-build = "0.0"
cxx-llvm-build = "0.0"
cxx-llvm-build-common = "0.0"
cxx-swift-auto = { version = "0.0", path = "../cxx-swift-auto" }
cxx-swift-build = { version = "0.0", path = "../cxx-swift-build" }

[dependencies]
cxx = { version = "1.0", features = ["c++20"] }
cxx-auto = "0.0"
cxx-clang = "0.0"
cxx-clang-auto = "0.0"
cxx-llvm = "0.0"
cxx-llvm-auto = "0.0"
cxx-swift-auto = { version = "0.0", path = "../cxx-swift-auto" }
moveref = "0.0"
pin-project-lite = "0.2"
snafu = "0.7.5"
tracing = { version = "0.1", optional = true }
tracing-forest = { version = "0.1", features = ["full"], optional = true }
tracing-subscriber = { version = "0.3", optional = true }

[dev-dependencies]
indoc = "2.0"
static_assertions = "1.1"
tempfile = "3.6"
